--- a/index.html
+++ b/index.html
@@ -708,7 +708,8 @@
         <span>🕒 3:00pm – 7:00pm</span>
       </div>
       <p>
-        Begin the weekend where it all started, right on campus. Check in, grab your wristband, and reconnect over wings and brews with brothers from every era.
+        Join us as we kick off the weekend in SNU territory with an afternoon of wings, brotherhood, and beer at Dirty Birds (formerly Round Table Pizza). 
+        Come and check in to receive your commemorative Kappa Rho merchandise and wristband, which will serve as your ticket to all events throughout the weekend.
       </p>
       <h3>Beirut Night</h3>
       <div class="day-meta">
@@ -716,7 +717,8 @@
         <span>🕗 8:00pm – Late</span>
       </div>
       <p>
-        As the sun sets, make your way home — to the Chapter House. Beirut, house music, and stories echoing through the halls where it all began.
+        After the buzz of old stories and booze has set in, join us as the sun sets whlie we make our way to a chapter house to re-live and reinvigoroute your youth.
+        Test your Beirut skills against the champions of today, and the legends of the past as we come together and enjoy the debauchery of Kappa Rho's signature pastime.
       </p>
     </div>
     <img src="warren-map.png" alt="Friday Map" />
@@ -766,6 +768,7 @@
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
     <div class="day-content">
       <h2>Sunday – October 19th</h2>
+      <h3>Farewell Barbeque</h3>
       <div class="day-meta">
         <span>📍 La Jolla Shores Park</span>
         <span>🕚 11:00am – 2:00pm</span>
@@ -786,19 +789,19 @@
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
       <img src="tier-rock.png" alt="Basic Tier" />
       <div class="price">$150</div>
-      <a class="button" href="#">Reserve</a>
+      <a class="button" href="https://legfi.com/app/events/kp40throck/2836">Purchase/RSVP</a>
     </div>
 
     <div class="tier" data-aos="fade-up" data-aos-delay="500">
       <img src="tier-middle-new.png" alt="Middle Tier" />
       <div class="price">$300</div>
-      <a class="button" href="#">Reserve</a>
+      <a class="button" href="https://legfi.com/app/events/kp40thsnake/2837">Purchase/RSVP</a>
     </div>
 
     <div class="tier" id="premium-tier" data-aos="fade-up" data-aos-delay="800">
       <img src="tier-premium-new.png" alt="Premium Tier" />
       <div class="price">$500</div>
-      <a class="button" href="#">Reserve</a>
+      <a class="button" href="https://legfi.com/app/events/kp40theternal/2838">Purchase/RSVP</a>
     </div>
   </section>
 
