--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 }
 
     .snake-left-container {
-  top: 11%;
+  top: 8%;
   left: 5%;
 }
 
@@ -642,6 +642,24 @@
   margin-bottom: 2rem;
 }
 
+    .day-heading {
+  font-size: 2.2rem;
+  font-family: 'DM Serif Display', serif;
+  color: gold;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-top: 1px solid rgba(255, 215, 0, 0.15);
+  padding-top: 3rem;
+}
+
+    .day-heading {
+  text-shadow: 0 0 15px rgba(255, 215, 0, 0.2);
+}
+
+
 
 
     
@@ -701,7 +719,7 @@
 <section class="event-days-section">
   <div class="day-card" data-aos="fade-up">
     <div class="day-content">
-      <h2>Friday – October 17th</h2>
+      <h2 class="day-heading">Friday – October 17th</h2>
       <h3>Check In & Kickoff</h3>
       <div class="day-meta">
         <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
@@ -709,16 +727,16 @@
       </div>
       <p>
         Join us as we kick off the weekend in SNU territory with an afternoon of wings, brotherhood, and beer at Dirty Birds (formerly Round Table Pizza). 
-        Come and check in to receive your commemorative Kappa Rho merchandise and wristband, which will serve as your ticket to all events throughout the weekend.
+        Come and check in to receive your commemorative Kappa Rho merchandise and wristband (see below), <b>which will serve as your ticket to all events</b> throughout the weekend.
       </p>
       <h3>Beirut Night</h3>
       <div class="day-meta">
         <span>📍 Chapter House</span>
-        <span>🕗 8:00pm – Late</span>
+        <span>🕗 8:00pm – ???</span>
       </div>
       <p>
         After the buzz of old stories and booze has set in, join us as the sun sets whlie we make our way to a chapter house to re-live and reinvigoroute your youth.
-        Test your Beirut skills against the champions of today, and the legends of the past as we come together and enjoy the debauchery of Kappa Rho's signature pastime.
+        Test your Beirut skills against the champions of today and the legends of the past as we come together and enjoy the debauchery of Kappa Rho's signature pastime.
       </p>
     </div>
     <img src="warren-map.png" alt="Friday Map" />
@@ -726,7 +744,7 @@
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="150">
     <div class="day-content">
-      <h2>Saturday – October 18th</h2>
+      <h2 class="day-heading">Saturday – October 18th</h2>
       <div class="sub-event">
         <h3>Secondary Check In</h3>
         <div class="day-meta">
@@ -734,7 +752,8 @@
         <span>🕙 10:00am – 11:00am</span>
       </div>
       <p>
-        Official business meets brotherhood. Participate in our annual Chapter Meeting and help shape the next 40 years of Kappa Rho.
+        If you missed primary check-in on day 1, or are arriving later, come by early to our meeting lecture hall (exact location TBD) to grab your merchandise and ticket. Take
+        some time to mingle and catch up with old friends before we begin the programming of the day.
       </p>
       </div>
       <h3>Active/Alumni Chapter Meeting</h3>
@@ -743,7 +762,9 @@
         <span>🕙 11:00am – 12:00pm</span>
       </div>
       <p>
-        Join as us we come together as both the active and alumni chapters to conduct an all-chapter meeting. Enjoy 
+        Join as us we come together as both the active and alumni chapters to conduct an all-chapter meeting. Throw yourself back into the ritual and tradition never forgotten
+        from your days as an active member. Write some brother zeros for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up
+        on what the active chapter is currently working on.
       </p>
       <h3>Pub Crawl</h3>
       <div class="day-meta">
@@ -751,7 +772,7 @@
         <span>🕛 12:00pm – 3:00pm</span>
       </div>
       <p>
-        Raise a glass (or a pitcher) on a nostalgic pub crawl through campus favorites. You'll be laughing like it's undergrad all over again.
+        Following our meeting, Raise a glass (or a pitcher) on a nostalgic pub crawl through campus favorites. You'll be laughing like it's undergrad all over again.
       </p>
       <h3>Cocktail Reception</h3>
       <div class="day-meta">
@@ -767,7 +788,7 @@
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
     <div class="day-content">
-      <h2>Sunday – October 19th</h2>
+      <h2 class="day-heading">Sunday – October 19th</h2>
       <h3>Farewell Barbeque</h3>
       <div class="day-meta">
         <span>📍 La Jolla Shores Park</span>
