--- a/index.html
+++ b/index.html
@@ -659,6 +659,12 @@
   text-shadow: 0 0 15px rgba(255, 215, 0, 0.2);
 }
 
+    strong, b {
+  color: gold;
+  font-weight: 600;
+}
+
+
 
 
 
@@ -736,10 +742,10 @@
       </div>
       <p>
         After the buzz of old stories and booze has set in, join us as the sun sets whlie we make our way to a chapter house to re-live and reinvigoroute your youth.
-        Test your Beirut skills against the champions of today and the legends of the past as we come together and enjoy the debauchery of Kappa Rho's signature pastime.
+        Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
       </p>
     </div>
-    <img src="warren-map.png" alt="Friday Map" />
+    <img src="ruit-v1.png" alt="Ruit Night" />
   </div>
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="150">
@@ -752,7 +758,7 @@
         <span>🕙 10:00am – 11:00am</span>
       </div>
       <p>
-        If you missed primary check-in on day 1, or are arriving later, come by early to our meeting lecture hall (exact location TBD) to grab your merchandise and ticket. Take
+        If you <b>missed primary check in</b> on day one, or are arriving later, come by early to our meeting lecture hall (exact location TBD) to grab your merchandise and ticket. Take
         some time to mingle and catch up with old friends before we begin the programming of the day.
       </p>
       </div>
@@ -762,8 +768,8 @@
         <span>🕙 11:00am – 12:00pm</span>
       </div>
       <p>
-        Join as us we come together as both the active and alumni chapters to conduct an all-chapter meeting. Throw yourself back into the ritual and tradition never forgotten
-        from your days as an active member. Write some brother zeros for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up
+        Join as us we come together as both the active and alumni chapters to conduct an <b>all-chapter meeting.</b> Throw yourself back into the <b>ritual and tradition</b> never forgotten
+        from your days as an active member. Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up
         on what the active chapter is currently working on.
       </p>
       <h3>Pub Crawl</h3>
