--- a/index.html
+++ b/index.html
@@ -656,12 +656,12 @@
 }
 
     .day-heading {
-  text-shadow: 0 0 15px rgba(255, 215, 0, 0.2);
+  text-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
 }
 
     strong, b {
   color: gold;
-  font-weight: 600;
+  font-weight: 800;
 }
 
 
@@ -712,7 +712,7 @@
     <h2 class="intro-title">Celebrating 40 Years of Brotherhood</h2>
     <p class="intro-body">
       Join us for a once-in-a-lifetime celebration as we honor the legacy of Sigma Nu Kappa Rho, 
-      commemorate our 1000th initiated member, and reconnect with generations of alumni.
+      commemorate our 1000th initiated member, and reconnect with generations of alumni. <b>See the detailing of events below.</b>
     </p>
     <p class="intro-subinfo">
       📅 October 17–19, 2025<br>
@@ -732,8 +732,8 @@
         <span>🕒 3:00pm – 7:00pm</span>
       </div>
       <p>
-        Join us as we kick off the weekend in SNU territory with an afternoon of wings, brotherhood, and beer at Dirty Birds (formerly Round Table Pizza). 
-        Come and check in to receive your commemorative Kappa Rho merchandise and wristband (see below), <b>which will serve as your ticket to all events</b> throughout the weekend.
+        Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer at Dirty Birds</b> (formerly Round Table Pizza). 
+        Come and check in to receive your <b>commemorative Kappa Rho merchandise and wristband</b> (see below), <b>which will serve as your ticket to all events</b> throughout the weekend.
       </p>
       <h3>Beirut Night</h3>
       <div class="day-meta">
@@ -741,10 +741,11 @@
         <span>🕗 8:00pm – ???</span>
       </div>
       <p>
-        After the buzz of old stories and booze has set in, join us as the sun sets whlie we make our way to a chapter house to re-live and reinvigoroute your youth.
+        After the buzz of old stories and booze has set in, join us as we make our way to a chapter house to <b>re-live and reinvigoroute your youth</b>.
         Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
       </p>
     </div>
+    <img src="dbs-check-in" alt="Check In" />
     <img src="ruit-v1.png" alt="Ruit Night" />
   </div>
 
@@ -778,7 +779,8 @@
         <span>🕛 12:00pm – 3:00pm</span>
       </div>
       <p>
-        Following our meeting, Raise a glass (or a pitcher) on a nostalgic pub crawl through campus favorites. You'll be laughing like it's undergrad all over again.
+        Following our meeting, raise a glass on a <b>nostalgic pub crawl</b> through campus favorites, or new spots you've never seen before. <b>Share stories, reconnect with
+        old friends, or meet new ones</b> as we spend an hour each at <b>Dirty Birds, Ridgewalk Social, and Shores Diner.</b>
       </p>
       <h3>Cocktail Reception</h3>
       <div class="day-meta">
@@ -786,7 +788,8 @@
         <span>🕠 5:30pm – 9:00pm</span>
       </div>
       <p>
-        Champagne, speeches, and the sound of legacy. Join us and your plus-one for the signature night of the weekend — a formal evening of toasts and memories.
+        After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> Just behind
+        Shores Diner (formerly known as Porter's Pub)
       </p>
     </div>
     <img src="shores-map.png" alt="Saturday Map" />
