--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
         Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
       </p>
     </div>
-    <img src="dbs-check-in" alt="Check In" />
+    <img src="dbs-check-in.png" alt="Check In" />
     <img src="ruit-v1.png" alt="Ruit Night" />
   </div>
 
