--- a/index.html
+++ b/index.html
@@ -664,6 +664,14 @@
   font-weight: 800;
 }
 
+    .day-images {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+  margin-top: 1rem;
+}
+
 
 
 
@@ -732,8 +740,8 @@
         <span>🕒 3:00pm – 7:00pm</span>
       </div>
       <p>
-        Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer at Dirty Birds</b> (formerly Round Table Pizza). 
-        Come and check in to receive your <b>commemorative Kappa Rho merchandise and wristband</b> (see below), <b>which will serve as your ticket to all events</b> throughout the weekend.
+        Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
+        Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout the weekend.
       </p>
       <h3>Beirut Night</h3>
       <div class="day-meta">
@@ -745,8 +753,11 @@
         Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
       </p>
     </div>
-    <img src="dbs-check-in.png" alt="Check In" />
-    <img src="ruit-v1.png" alt="Ruit Night" />
+    <div class="day-images">
+  <img src="dbs-check-in.png" alt="Check In" />
+  <img src="ruit-v1.png" alt="Ruit Night" />
+</div>
+
   </div>
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="150">
@@ -779,8 +790,8 @@
         <span>🕛 12:00pm – 3:00pm</span>
       </div>
       <p>
-        Following our meeting, raise a glass on a <b>nostalgic pub crawl</b> through campus favorites, or new spots you've never seen before. <b>Share stories, reconnect with
-        old friends, or meet new ones</b> as we spend an hour each at <b>Dirty Birds, Ridgewalk Social, and Shores Diner.</b>
+        Following our meeting, <b>raise a glass</b> on a nostalgic pub crawl through campus favorites, or new spots you've never seen before. <b>Share stories, reconnect with
+        old friends, or meet new ones</b> as we spend an hour each at Dirty Birds, Ridgewalk Social, and Shores Diner.
       </p>
       <h3>Cocktail Reception</h3>
       <div class="day-meta">
