--- a/index.html
+++ b/index.html
@@ -402,8 +402,12 @@
     min-width: 100%;
   }
 
-  .day-card img {
-    display: none;
+   .day-card img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    margin-top: 1rem;
   }
 }
 
@@ -672,6 +676,14 @@
   margin-top: 1rem;
 }
 
+    .event-divider {
+  height: 1px;
+  border: none;
+  background: linear-gradient(to right, transparent, rgba(255, 215, 0, 0.2), transparent);
+  margin: 2rem 0;
+}
+
+
 
 
 
@@ -743,6 +755,7 @@
         Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
         Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout the weekend.
       </p>
+      <hr class="event-divider">
       <h3>Beirut Night</h3>
       <div class="day-meta">
         <span>📍 Chapter House</span>
@@ -774,6 +787,7 @@
         some time to mingle and catch up with old friends before we begin the programming of the day.
       </p>
       </div>
+      <hr class="event-divider">
       <h3>Active/Alumni Chapter Meeting</h3>
       <div class="day-meta">
         <span>📍 UCSD Lecture Hall</span>
@@ -784,6 +798,7 @@
         from your days as an active member. Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up
         on what the active chapter is currently working on.
       </p>
+      <hr class="event-divider">
       <h3>Pub Crawl</h3>
       <div class="day-meta">
         <span>📍 Dirty Birds → Ridgewalk Social → Shores Diner</span>
@@ -793,6 +808,7 @@
         Following our meeting, <b>raise a glass</b> on a nostalgic pub crawl through campus favorites, or new spots you've never seen before. <b>Share stories, reconnect with
         old friends, or meet new ones</b> as we spend an hour each at Dirty Birds, Ridgewalk Social, and Shores Diner.
       </p>
+      <hr class="event-divider">
       <h3>Cocktail Reception</h3>
       <div class="day-meta">
         <span>📍 Shores Diner (formerly Porter’s Pub)</span>
