--- a/index.html
+++ b/index.html
@@ -776,35 +776,53 @@
 <section class="event-days-section">
   <div class="day-card" data-aos="fade-up">
     <div class="day-content">
+      
       <h2 class="day-heading">Friday – October 17th</h2>
-      <div class="sub-event">
-      <h3>Check In & Kickoff</h3>
-      <div class="day-meta">
-        <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
-        <span>🕒 3:00pm – 7:00pm</span>
-      </div>
-      <p>
-        Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
-        Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout the weekend.
-      </p>
-      <img src="dbs-check-in.png" alt="Check In" />
-      </div>
-      <hr class="event-divider">
-      <div class="sub-event">
-      <h3>Beirut Night</h3>
-      <div class="day-meta">
-        <span>📍 Chapter House</span>
-        <span>🕗 8:00pm – ???</span>
-      </div>
-      <p>
-        After the buzz of old stories and booze has set in, join us as we make our way to a chapter house to <b>re-live and reinvigoroute your youth</b>.
-        Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
-      </p>
-    
-    <div class="day-images">
-  <img src="ruit-v1.png" alt="Ruit Night" />
+
+<div class="sub-event">
+  <div class="sub-event-text">
+    <h3>Check In & Kickoff</h3>
+    <div class="day-meta">
+      <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
+      <span>🕒 3:00pm – 7:00pm</span>
+    </div>
+    <p>
+      Join us as we kick off the weekend in SNU territory with an afternoon of
+      <strong>wings, brotherhood, and beer</strong> at Dirty Birds (formerly Round Table Pizza).
+      Come and check in to receive your commemorative Kappa Rho
+      <strong>merchandise and wristband</strong> (see below), which will serve as your
+      <strong>ticket to all events</strong> throughout the weekend.
+    </p>
+  </div>
+
+  <div class="sub-event-media">
+    <img src="dbs-check-in.png" alt="Check In at Dirty Birds" />
+  </div>
 </div>
-      </div>
+
+<hr class="event-divider" />
+
+<div class="sub-event">
+  <div class="sub-event-text">
+    <h3>Beirut Night</h3>
+    <div class="day-meta">
+      <span>📍 Chapter House</span>
+      <span>🕗 8:00pm – ???</span>
+    </div>
+    <p>
+      After the buzz of old stories and booze has set in, join us as we make our way
+      to the chapter house to <strong>re-live and reinvigorate your youth</strong>.
+      Test your <strong>Beirut skills</strong> against the champions of today and the
+      legends of the past as we come together and enjoy the debauchery of
+      <strong>Kappa Rho's signature pastime</strong>.
+    </p>
+  </div>
+
+  <div class="sub-event-media">
+    <img src="ruit-v1.png" alt="Ruit Night" />
+  </div>
+</div>
+
 
 
   </div>
