--- a/index.html
+++ b/index.html
@@ -745,9 +745,11 @@
 </section>
 
 <section class="event-days-section">
+  <!-- FRIDAY -->
   <div class="day-card" data-aos="fade-up">
     <div class="day-content">
       <h2 class="day-heading">Friday – October 17th</h2>
+
       <h3>Check In & Kickoff</h3>
       <div class="day-meta">
         <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
@@ -757,7 +759,9 @@
         Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
         Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout the weekend.
       </p>
+
       <hr class="event-divider">
+
       <h3>Beirut Night</h3>
       <div class="day-meta">
         <span>📍 Chapter House</span>
@@ -768,77 +772,80 @@
         Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
       </p>
     </div>
-    <div class="day-images">
-  <img src="dbs-check-in.png" alt="Check In" />
-  <img src="ruit-v1.png" alt="Ruit Night" />
-</div>
-
   </div>
 
+  <!-- SATURDAY -->
   <div class="day-card" data-aos="fade-up" data-aos-delay="150">
     <div class="day-content">
       <h2 class="day-heading">Saturday – October 18th</h2>
-      <div class="sub-event">
-        <h3>Secondary Check In</h3>
-        <div class="day-meta">
+
+      <h3>Secondary Check In</h3>
+      <div class="day-meta">
         <span>📍 UCSD Lecture Hall</span>
         <span>🕙 10:00am – 11:00am</span>
       </div>
       <p>
-        If you <b>missed primary check in</b> on day one, or are arriving later, come by early to our meeting lecture hall (exact location TBD) to grab your merchandise and ticket. Take
-        some time to mingle and catch up with old friends before we begin the programming of the day.
+        If you <b>missed primary check in</b> on day one, or are arriving later, come by early to our meeting lecture hall (exact location TBD) to grab your merchandise and ticket. 
+        Take some time to mingle and catch up with old friends before we begin the programming of the day.
       </p>
-      </div>
+
       <hr class="event-divider">
+
       <h3>Active/Alumni Chapter Meeting</h3>
       <div class="day-meta">
         <span>📍 UCSD Lecture Hall</span>
         <span>🕙 11:00am – 12:00pm</span>
       </div>
       <p>
-        Join as us we come together as both the active and alumni chapters to conduct an <b>all-chapter meeting.</b> Throw yourself back into the <b>ritual and tradition</b> never forgotten
-        from your days as an active member. Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up
-        on what the active chapter is currently working on.
+        Join as us we come together as both the active and alumni chapters to conduct an <b>all-chapter meeting.</b> 
+        Throw yourself back into the <b>ritual and tradition</b> never forgotten from your days as an active member. 
+        Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up on what the active chapter is currently working on.
       </p>
+
       <hr class="event-divider">
+
       <h3>Pub Crawl</h3>
       <div class="day-meta">
         <span>📍 Dirty Birds → Ridgewalk Social → Shores Diner</span>
         <span>🕛 12:00pm – 3:00pm</span>
       </div>
       <p>
-        Following our meeting, <b>raise a glass</b> on a nostalgic pub crawl through campus favorites, or new spots you've never seen before. <b>Share stories, reconnect with
-        old friends, or meet new ones</b> as we spend an hour each at Dirty Birds, Ridgewalk Social, and Shores Diner.
+        Following our meeting, <b>raise a glass</b> on a nostalgic pub crawl through campus favorites, or new spots you've never seen before. 
+        <b>Share stories, reconnect with old friends, or meet new ones</b> as we spend an hour each at Dirty Birds, Ridgewalk Social, and Shores Diner.
       </p>
+
       <hr class="event-divider">
+
       <h3>Cocktail Reception</h3>
       <div class="day-meta">
         <span>📍 Shores Diner (formerly Porter’s Pub)</span>
         <span>🕠 5:30pm – 9:00pm</span>
       </div>
       <p>
-        After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> Just behind
-        Shores Diner (formerly known as Porter's Pub)
+        After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> 
+        Just behind Shores Diner (formerly known as Porter's Pub).
       </p>
     </div>
-    <img src="shores-map.png" alt="Saturday Map" />
   </div>
 
+  <!-- SUNDAY -->
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
     <div class="day-content">
       <h2 class="day-heading">Sunday – October 19th</h2>
+
       <h3>Farewell Barbeque</h3>
       <div class="day-meta">
         <span>📍 La Jolla Shores Park</span>
         <span>🕚 11:00am – 2:00pm</span>
       </div>
       <p>
-        One last hug, one last plate, and a group photo by the sea. Bring the whole family for brunch on the beach as we close out 40 unforgettable years.
+        One last hug, one last plate, and a group photo by the sea. 
+        Bring the whole family for brunch on the beach as we close out 40 unforgettable years.
       </p>
     </div>
-    <img src="zoot-map.png" alt="Sunday Map" />
   </div>
 </section>
+
 
 
   
