--- a/index.html
+++ b/index.html
@@ -759,6 +759,7 @@
         Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
         Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout the weekend.
       </p>
+      <img src="dbs-check-in.png" alt="Check In">
 
       <hr class="event-divider">
 
@@ -771,6 +772,7 @@
         After the buzz of old stories and booze has set in, join us as we make our way to a chapter house to <b>re-live and reinvigoroute your youth</b>.
         Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
       </p>
+      <img src="ruit-v1.png" alt="Ruit Night">
     </div>
   </div>
 
