--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
     </div>
 
     <div class="tier" data-aos="fade-up" data-aos-delay="500">
-      <img src="tier-middle-new.png" alt="Middle Tier" />
+      <img src="tier-middle-nopin.png" alt="Middle Tier" />
       <div class="price">$300</div>
       <a class="button" href="https://legfi.com/app/events/kp40thsnake/2837">Purchase/RSVP</a>
     </div>
