--- a/index.html
+++ b/index.html
@@ -852,10 +852,9 @@
 
   
   <section class="tiers-section" id="tiers">
-  <p class="subtitle">Select your commemorative tier package</p>
-  <p class="subtitle">All tiers come with a food and drink ticket (as seen in basic tier) which will provide you with dinner and one free drink at the cocktail
-    reception on Saturday.</p>
-  <p class="subtitle">*Designs are not final subject to slight modifications"</p>
+  <p class="subtitle">Select your commemorative tier package <br>All tiers come with a food and drink ticket (as seen in basic tier) which will provide you <br>with 
+    dinner and one free drink at the cocktail reception on Saturday.</p>
+  <p class="subtitle"><i>*Designs are not final and subject to slight modifications*</i></p>
   <div class="tiers">
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
       <img src="tier-rock.png" alt="Basic Tier" />
