--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 
   
   <section class="tiers-section" id="tiers">
-  <p class="subtitle">Select your commemorative tier package <br>All tiers come with a food and drink ticket (as seen in basic tier) which will provide you <br>with 
+  <p class="subtitle">- Select your commemorative tier package - <br>All tiers come with a food and drink ticket (as seen in basic tier) which will provide you <br>with 
     dinner and one free drink at the cocktail reception on Saturday.</p>
   <p class="subtitle"><i>*Designs are not final and subject to slight modifications*</i></p>
   <div class="tiers">
